--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-bouncer": "^0.2.0",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
