--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
       "terminal.integrated.defaultProfile.windows": "PowerShell",
       
       "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+        "source.fixAll.eslint": "explicit"
       },
       "eslint.validate": ["javascript"],
       "github.copilot.advanced": {
