--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon --inspect=0.0.0.0:9229 -L app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build && docker image prune -f"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -25,6 +27,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard": "^17.0.0",
